--- a/tests/dummy/app/templates/category.hbs
+++ b/tests/dummy/app/templates/category.hbs
@@ -6,4 +6,4 @@
 {{/each}}
 </ul>
 
-{{infinity-loader infinityModel=model}}
+{{infinity-loader infinityModel=model scrollable="#ember-testing-container"}}
